added relaxing to index elements

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "css:prefix": "postcss --use autoprefixer -b \"last 4 versions\" css/main.css -o css/main.css",
     "css:compress": "css-minify -f css/main.css -o css",
     "css:build": "npm-run-all css:compile css:prefix css:compress"
+  },
+  "dependencies": {
+    "rellax": "^1.12.1"
   }
 }
